# poggit

./: .editorconfig  .gitattributes  .gitignore  .travis.yml  .vimrc  Cargo.toml  Dockerfile  INSTALL.md  LICENSE  Makefile  README.md  SECURITY.md  composer.json  default-docker-compose.yml  deploy.yaml  docker-compose.yml  entry.php  gulpfile.js  link.sh  modules.dot  package-lock.json  package.json  schema.sql  secrets.stub.js  setup.sh  template.env  wait-db.sh  wait-file.sh
.vim/: template.graphql  template.rs  template.ts
app/: link.sh  run.sh
assets/: .gitignore  Cargo.toml  build.rs  build.sh  pmapis.yml
backend/: Cargo.toml
backend/migrations/2019-07-08-193419_account/: down.sql  up.sql
backend/migrations/2019-07-09-053334_login_history/: down.sql  up.sql
backend/migrations/2019-07-09-054711_repo/: down.sql  up.sql
backend/migrations/2019-07-09-180651_project/: down.sql  up.sql
backend/migrations/2019-07-09-181337_artifact/: down.sql  up.sql
backend/src/: gql.rs  interface.rs  main.rs  prelude.rs  schema.rs
backend/src/gql/: account.rs  mod.rs  mutations.rs  query.rs
builder/: Cargo.toml  Rocket.toml
builder/src/: main.rs  prelude.rs
builder/src/payload/: mod.rs  push.rs
ci/: Cargo.toml
client/: client.ts  loader.js  main.ts  tsconfig.json
common/: Cargo.toml  build.rs
common/src/: config.rs  lib.rs  prelude.rs  schema.rs  util.rs
common/src/client/: backend.rs  mod.rs
common/src/web/: mod.rs  param.rs
dev/: compileSecrets.js
doc/: 20171019.patch.sql  20171124.patch.sql  20180103.patch.sql  20180605.patch.sql  20210207.patch.sql  20211127.patch.sql  20230625.patch.sql  apps-migration.patch.sql  beta-to-better-submit.patch.sql  beta-to-dynamic-projectbuildpage.patch.sql  beta-to-virion-usage.patch.sql  foreign-key-patch.sql  homepage.patch.sql  mysql.sql  session-tweaks.patch.sql
frontend/: modules.dot  run.sh
gql/: schema.graphql
initdb/: init.sql
js/: admin.rule.edit.js  admin.rule.edit.min.js  admin.spoon.edit.js  admin.spoon.edit.min.js  authorize.js  authorize.min.js  bootstrap.js  bootstrap.min.js  build.js  build.min.js  ci.fqn.js  ci.fqn.min.js  ci.project.js  ci.project.min.js  home.js  jQuery-UI-Dialog-extended.js  jQuery-UI-Dialog-extended.min.js  jquery-ui.js  jquery-ui.min.js  jquery.form.js  jquery.form.min.js  jquery.paginate.js  jquery.paginate.min.js  jquery.sortElements.js  jquery.sortElements.min.js  jquery.verticalTabs.js  jquery.verticalTabs.min.js  mobile.js  mobile.min.js  newSubmit.js  newSubmit.min.js  oldSubmit.js  release.details.admin.js  release.details.admin.min.js  release.details.js  release.details.min.js  release.list.js  release.list.min.js  release.review.js  release.review.min.js  (+14 more)
legacy/: std.js  std.min.js
lib/: link.sh
mysql/: beta-migration.sql
plugins/: Cargo.toml  Rocket.toml
plugins/client/: package-lock.json  package.json
plugins/client/src/: main.ts
plugins/src/: assets.rs  detail.rs  index.rs  main.rs  prelude.rs  resources.rs
plugins/templates/: layout.hbs
port/: Dockerfile  port-old-poggit.ts  port-old.php  tsconfig.json
private/: secrets.js  server.js  version.js
proxy/: Cargo.toml
public/: client.js  client.min.js
res/: PluginChecker-api2.phar  PluginChecker.phar  ci.fqn.css  ci.fqn.min.css  jquery-ui.css  jquery-ui.min.css  jquery-ui.structure.css  jquery-ui.structure.min.css  jquery-ui.theme.css  jquery.paginate.css  jquery.paginate.min.css  jquery.verticalTabs.css  jquery.verticalTabs.min.css  std.js  style-dark.css  style-dark.min.css  style.css  style.min.css  style2.css  toggles-light.min.css  toggles.min.css  travisInstall.sh  travisPluginTest.php  travisScript.sh
server/: error.ts  ext.ts  extensions.ts  home.ts  index.ts  router.ts  secrets.ts  server.ts  setup.ts  tsconfig.json  version.ts  www.ts
shared/: PoggitError.ts  SecretsType.ts  bootstrap-sass.d.ts  console.ts  consts.ts  error.ts  lazy.ts  package.json  poggitError.ts  util.ts
signal/: PoggitConsts.d.ts  SessionData.d.ts  poggitTypes.d.ts  types.d.ts
src/: modules.php  pages.php  paths.php
stub/: .htaccess  README.md  apcu.php  globals.js  globals.ts  mysql.sql  poggit.php  secret-stub.json  session.js  yaml.php
tools/: configure.ts  package-lock.json  package.json  tsconfig.json
travis/: integration.lib.sh  populate.sh  populate.sql  secrets-default.json  secrets-import.js  testIntegration.sh  testUnit.sh  waitServerStart.sh
view/: error.view.ts  home.pug  home.view.ts  index.ts  parent.pug  pmapis.pug  submit-rules.pug  tos.pug  util.pug  (+1 more)
(+930 files in other folders)
