[package]
name = "backend"
version = "2.0.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"

[dependencies]
common = {path = "../common", features = []}
diesel = {version = "1", features = ["postgres", "r2d2"]}
diesel-derive-enum = {version = "0.4", features = ["postgres"]}
juniper = "0.12"
juniper_rocket = "0.3"
r2d2 = "0.8"
rocket = "0.4"
rocket_contrib = {version = "0.4", features = ["json"]}
serde = "1"
serde_derive = "1"
