[package]
name = "builder"
version = "2.0.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"

[dependencies]
common = {path = "../common", features = ["client"]}
hex = "0.3"
lazy_static = "0.2"
ring = "0.13"
rocket = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
