[package]
name = "builder"
version = "2.0.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"

[dependencies]
common = {path = "../common", features = ["client"]}

hex = "0.3.2"
lazy_static = "1.3"
ring = "0.13.5"
rocket = "0.4.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
