[package]
name = "common"
version = "2.0.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"

[dependencies]
config = "0.9"
dotenv = "0.14"
env_logger = "0.6"
graphql_client = {version = "0.8", optional = true}
log = "0.4"
rocket = "0.4"
serde = "1"
serde_derive = "1"

[features]
default = []
client = ["graphql_client"]
web = []
