[package]
name = "common"
version = "2.0.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"

[dependencies]
assets = {path = "../assets", optional = true}

chrono = "0.4.7"
config = "0.9.3"
dotenv = "0.14.1"
env_logger = "0.6.2"
log = "0.4.8"
rocket = "0.4.2"
serde = {version = "1.0", features = ["derive"]}

[features]
default = []
client = []
back = []
web = ["assets"]
