[package]
name = "plugins"
version = "2.0.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"

[dependencies]
common = {path = "../common", features = ["client"]}
rocket = ""
rocket_contrib = {version = "", features = ["json", "serve", "handlebars_templates", "helmet"]}
serde = ""
serde_derive = ""

