[package]
name = "plugins"
version = "2.0.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"

[dependencies]
common = {path = "../common", features = ["client", "web"]}

rocket = "0.4.2"
rocket_contrib = {version = "0.4.2", features = ["json", "serve", "handlebars_templates", "helmet"]}
serde = {version = "1.0", features = ["derive"]}
